# FlyCrys

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  com.flycrys.app.desktop
.github/workflows/: ci.yml  release.yml
assets/syntaxes/: Dockerfile.sublime-syntax  TOML.sublime-syntax
docs/: claude-cli-features.md  design-run-panel.md  launch-plan.md  promotion-strategy.md  refactoring-plan.md  similar-projects.md  todo.md
docs/appstores/: aur.md  fedora-copr.md  flathub.md  nixpkgs.md  snapcraft.md
hooks/: pre-commit
src/: agent_config_dialog.rs  agent_panel.rs  agent_process.rs  agent_widgets.rs  bookmark_dialog.rs  chat_entry.rs  chat_webview.rs  file_entry.rs  find_bar.rs  git_panel.rs  git_status.rs  highlight.rs  lib.rs  main.rs  markdown.rs  run_panel.rs  session.rs  skills_dialog.rs  terminal.rs  textview.rs  tree.rs  watcher.rs  workspace.rs
src/config/: constants.rs  mod.rs  theme.rs  types.rs
src/models/: agent_config.rs  app_config.rs  bookmark.rs  chat.rs  mod.rs  slash_command.rs  workspace_config.rs
src/services/: claude_session.rs  git.rs  mod.rs  platform.rs  skills.rs  storage.rs  voice.rs
src/services/cli/: claude.rs  mod.rs
src/ui/: mod.rs
src/ui/agent_panel/: chat_factory.rs  event_handler.rs  mod.rs  slash_popover.rs  state.rs
tests/: agent_config.rs  agent_event.rs  chat_history.rs  claude_session.rs  highlight.rs  markdown.rs  session.rs
tests/common/: mod.rs
