[package]
name = "flycristal"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_12"] }
vte4 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
